// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dialog API 1`] = `
<StatefulDialog>
  <div>
    <span
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "backgroundColor": "antiquewhite",
        }
      }
    >
      Open dialog
    </span>
    <Dialog
      backdropTransition={
        Object {
          "animation": Object {
            "delay": 0,
            "duration": 200,
            "ease": "easeOutCubic",
            "opacity": 1,
          },
          "style": Object {
            "opacity": 0.3,
          },
        }
      }
      containerTransition={
        Object {
          "animation": Object {
            "delay": 0,
            "duration": 200,
            "ease": "easeOutQuart",
            "translateY": 0,
          },
          "style": Object {
            "transform": "translateY(-20px)",
          },
        }
      }
      onOutsideClick={[Function]}
      show={false}
    />
  </div>
</StatefulDialog>
`;

exports[`Storyshots Dialog Custom transition 1`] = `
<StatefulDialog
  containerTransition={
    Object {
      "animation": Object {
        "delay": 0,
        "duration": 200,
        "ease": "easeOutBounce",
        "translateY": 40,
      },
      "style": Object {
        "transform": "translateY(20px)",
      },
    }
  }
>
  <div>
    <span
      onClick={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "backgroundColor": "antiquewhite",
        }
      }
    >
      Open dialog
    </span>
    <Dialog
      backdropTransition={
        Object {
          "animation": Object {
            "delay": 0,
            "duration": 200,
            "ease": "easeOutCubic",
            "opacity": 1,
          },
          "style": Object {
            "opacity": 0.3,
          },
        }
      }
      containerTransition={
        Object {
          "animation": Object {
            "delay": 0,
            "duration": 200,
            "ease": "easeOutBounce",
            "translateY": 40,
          },
          "style": Object {
            "transform": "translateY(20px)",
          },
        }
      }
      onOutsideClick={[Function]}
      show={false}
    />
  </div>
</StatefulDialog>
`;
